--- a/MobilePOS/bin/AndroidManifest.xml
+++ b/MobilePOS/bin/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name="mobilepos.activity.InventoryAddMoreItemActivity"></activity>
         <activity android:name="mobilepos.activity.InventoryShowItemInfoActivity"></activity>
         <activity android:name="mobilepos.activity.SaleMainActivity"></activity>
+        <activity android:name="mobilepos.activity.SaleSelectItemActivity"></activity>
     </application>
 
 </manifest>
