add CustomerMainActivity update AndroidManifest.xml

--- a/MobilePOS/AndroidManifest.xml
+++ b/MobilePOS/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name="ku.mobilepos.activity.InventoryShowItemInfoActivity"></activity>
         <activity android:name="ku.mobilepos.activity.SaleMainActivity"></activity>
         <activity android:name="ku.mobilepos.activity.SaleSelectItemActivity"></activity>
+          <activity android:name="ku.mobilepos.activity.CustomerMainActivity"></activity>
     </application>
 
 </manifest>
