--- a/MobilePOS/AndroidManifest.xml
+++ b/MobilePOS/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name="ku.mobilepos.activity.SaleMainActivity"></activity>
         <activity android:name="ku.mobilepos.activity.SaleSelectItemActivity"></activity>
           <activity android:name="ku.mobilepos.activity.CustomerMainActivity"></activity>
+             <activity android:name="ku.mobilepos.activity.CustomerAddNewCustomerActivity"></activity>
     </application>
 
 </manifest>
